[package]
name = "rust-cc-benchmarks"
description = "Benchmarks for rust-cc and other garbage collectors implemented in the Rust programming language"
version = "0.1.0"
authors = ["fren_gor <goro@frengor.com>"]
readme = "README.md"
repository = "https://github.com/frengor/rust-cc-benchmarks"
license = "MIT OR Apache-2.0"
edition = "2021"

publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

# To allow the --verbose option to work with cargo (see Criterion FAQ)
[[bin]]
name = "rust-cc-benchmarks"
bench = false

[dependencies]
criterion = { version = "0.5.1", features = ["html_reports"] }
rand = "0.8.3"
parking_lot = "=0.11" # For mgc benchmarks

#rust-cc = "0.2.0"
rust-cc = { git = "https://github.com/frengor/rust-cc", branch = "dev" }
gc = { git = "https://github.com/Manishearth/rust-gc", features = ["derive"] }
safe-gc = { git = "https://github.com/ZainlessBrombie/rs-safe-gc", optional = true }
shredder = { version = "0.2.0", optional = true }
mgc = { git = "https://github.com/sunjay/mgc" }
broom = { version = "0.3.2", optional = true }
bacon_rajan_cc = "0.4.0"

[features]
shredder = ["dep:shredder"]
broom = ["dep:broom"]
safe-gc = ["dep:safe-gc"]
jemalloc = ["dep:tikv-jemallocator"]

[[bench]]
name = "bench"
harness = false

[target.'cfg(not(target_env = "msvc"))'.dependencies]
tikv-jemallocator = { version = "0.5.4", optional = true }
